--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     padding: 0;
 }
 
+a {
+    text-decoration-line: none;
+}
+
 .center {
     padding-left: calc(50% - 1170px/2);
     padding-right: calc(50% - 1170px/2);
@@ -14,13 +18,12 @@
     padding-top: 40px;
     padding-bottom: 40px;
     display: flex;
-    flex-direction: row;
     align-items: center;
     justify-content: space-between;
 }
+
 .brand {
     display: flex;
-    flex-direction: row;
     justify-content: flex-start;
     align-items: center;
     gap: 14px;
@@ -41,20 +44,18 @@
 
 .nav {
     display: flex;
-    flex-direction: row;
     justify-content: flex-end;
     align-items: center;
     gap: 30px;
 }
 
-.nav-link-home {
+.link-home {
     color: #F25822;
     font-family: Gilroy-SemiBold;
     font-size: 14px;
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    text-decoration-line: none;
 }
 
 .nav-link {
@@ -64,14 +65,12 @@
     font-style: normal;
     font-weight: 400;
     line-height: normal;
-    text-decoration-line: none;
 }
 
 .main-content {
     padding-top: 42px;
     padding-bottom: 162px;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     align-items: center;
     gap: 41px;
@@ -106,7 +105,6 @@
 
 .main-content-buttons {
     display: flex;
-    flex-direction: row;
     align-items: center;
     justify-content: flex-start;
     gap: 72px;
@@ -141,7 +139,165 @@
     padding-top: 97px;
     padding-bottom: 97px;
     display: flex;
-    flex-direction: row;
     justify-content: space-between;
     align-items: center;
+}
+
+.potential {
+    padding-top: 100px;
+    padding-bottom: 100px;
+    padding-left: calc(50% - 1110px/2);
+    padding-right: calc(50% - 1110px/2);
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 90px;
+}
+
+.potential :hover {
+    box-shadow: 15px 25px 56px 6px rgba(0, 0, 0, 0.06);
+
+}
+
+.potential-item {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+}
+
+.potential-item :hover {
+    box-shadow: none;
+}
+
+.potential-item img {
+    margin-top: 40px;
+    margin-bottom: 25px;
+}
+
+.potential-item h3 {
+    color: #000;
+    font-family: Gilroy-Bold;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-bottom: 17px;
+}
+
+.potential-item p {
+    color: #666;
+    font-family: Gilroy-Regular;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+}
+
+.potential-item a {
+    color: #000;
+    font-family: Gilroy-Bold;
+    font-size: 11px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    padding-top: 25px;
+    padding-bottom: 25px;
+}
+
+.advantages {
+    background: #FAFAFA;
+    padding-bottom: 100px;
+}
+
+.why-we {
+    padding-top: 92px;
+    padding-bottom: 55px;
+    padding-left: calc(50% - 682px/2);
+    padding-right: calc(50% - 682px/2);
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.why-we h2 {
+    color: #000;
+    font-family: Gilroy-Bold;
+    font-size: 45px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+}
+
+.why-we p {
+    color: #666;
+    text-align: center;
+    font-family: Gilroy-Regular;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+}
+
+.advantage-items {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    gap: 30px;
+}
+
+.advantage-item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: #FFF;
+}
+
+.advantage-item img {
+    max-width: 370px;
+}
+
+.advantage-item h3 {
+    color: #000;
+    font-family: Gilroy-Bold;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: normal;
+    margin-bottom: 22px;
+}
+
+.advantage-item p {
+    color: #AAA;
+    text-align: center;
+    font-family: Gilroy-Regular;
+    font-size: 15px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    margin-left: 30px;
+    margin-right: 30px;
+    margin-bottom: 39px;
+}
+
+.push {
+    border-radius: 50px;
+    background: #F25822;
+    padding-top: 15px;
+    padding-bottom: 15px;
+    padding-left: 46px;
+    padding-right: 46px;
+    color: #FFF;
+    text-align: center;
+    font-family: Gilroy-Bold;
+    font-size: 13px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 150%;
+    margin-bottom: 60px;
+}
+
+.advantage-items :hover {
+    box-shadow: 15px 25px 60px -5px rgba(0, 0, 0, 0.10)
+}
+
+.advantage-item :hover {
+    box-shadow:none;
 }
